# todoist_voice_bot

./: .gitignore  config.py  dockerfile  main.py  pyproject.toml  requirements.txt  transcribe.py
bot/: create_bot.py  exceptions.py
bot/commands/: __init__.py
bot/constants/: __init__.py
bot/handlers/: __init__.py  command_handler.py  task_handler.py  voice_handler.py
bot/keyboards/: reply.py
bot/parser/: task_parser.py
bot/states/: __init__.py
bot/utils/: __init__.py
services/: llm.py  transcribe.py
todoist/: __init__.py
utils/: logger.py
